--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>dbdemo</title>
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_917213_svdw61w49g.css">
   </head>
   <body>
     <noscript>
